Visibility and position of article top heading has been fixed in print styles

--- a/www/assets/css/SCSS/front/print.scss
+++ b/www/assets/css/SCSS/front/print.scss
@@ -1,5 +1,6 @@
 body{
   font-size: 14px;
+  padding-top: 0;
 }
 
 .container header{
@@ -7,11 +8,21 @@ body{
 }
 
 .page{
+  margin-top: 0;
+
   header{
     display: block;
+
+    h2{
+      margin-top: 0;
+    }
   }
 
   .page-info{
+    display: none;
+  }
+
+  .tags{
     display: none;
   }
 
